--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
-    "@types/node": "^14.18.1"
+    "@types/node": "^14.18.1",
+    "vitest": "0.0.113"
   }
 }
