--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@types/node": "^14.18.1",
+    "c8": "^7.10.0",
+    "vite": "^2.7.4",
     "vitest": "0.0.113"
   }
 }
